--- a/main.ipynb
+++ b/main.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
     "    nhead = 6           # 300 is divisible by 6 (300/6 = 50)\n",
     "    num_encoder_layers = 3\n",
     "    num_decoder_layers = 3\n",
-    "    num_epochs = 10\n",
+    "    num_epochs = 20\n",
     "    batch_size = 32\n",
     "    learning_rate = 1e-4\n",
     "    \n",
@@ -927,77 +927,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\TAMANG\\Documents\\GitHub\\research-cross-lingual-translation-english-bengali\\venv\\Lib\\site-packages\\torch\\nn\\modules\\transformer.py:385: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
-      "  warnings.warn(\n",
-      "2025-02-16 23:40:05,366 - INFO - Model initialized and moved to device: cpu\n",
-      "2025-02-16 23:40:31,490 - INFO - Aligned embeddings integrated into the model.\n",
-      "2025-02-16 23:40:31,602 - INFO - Training data loaded. Total batches: 32\n",
-      "2025-02-16 23:40:48,473 - INFO - Epoch 1, Batch 0, Loss: 10.4155\n",
-      "2025-02-16 23:41:06,517 - INFO - Epoch 1, Batch 10, Loss: 9.2117\n",
-      "2025-02-16 23:41:18,064 - INFO - Epoch 1, Batch 20, Loss: 8.7462\n",
-      "2025-02-16 23:41:29,027 - INFO - Epoch 1, Batch 30, Loss: 8.3767\n",
-      "2025-02-16 23:41:29,465 - INFO - Epoch 1 complete, Average Loss: 8.9698\n",
-      "2025-02-16 23:41:30,536 - INFO - Epoch 2, Batch 0, Loss: 8.0627\n",
-      "2025-02-16 23:41:40,316 - INFO - Epoch 2, Batch 10, Loss: 7.7759\n",
-      "2025-02-16 23:41:50,543 - INFO - Epoch 2, Batch 20, Loss: 7.4557\n",
-      "2025-02-16 23:42:00,870 - INFO - Epoch 2, Batch 30, Loss: 7.4359\n",
-      "2025-02-16 23:42:01,044 - INFO - Epoch 2 complete, Average Loss: 7.6949\n",
-      "2025-02-16 23:42:02,001 - INFO - Epoch 3, Batch 0, Loss: 7.3280\n",
-      "2025-02-16 23:42:11,351 - INFO - Epoch 3, Batch 10, Loss: 7.0365\n",
-      "2025-02-16 23:42:21,098 - INFO - Epoch 3, Batch 20, Loss: 7.1265\n",
-      "2025-02-16 23:42:31,484 - INFO - Epoch 3, Batch 30, Loss: 6.8586\n",
-      "2025-02-16 23:42:31,690 - INFO - Epoch 3 complete, Average Loss: 7.0874\n",
-      "2025-02-16 23:42:32,890 - INFO - Epoch 4, Batch 0, Loss: 6.9214\n",
-      "2025-02-16 23:42:43,350 - INFO - Epoch 4, Batch 10, Loss: 6.7889\n",
-      "2025-02-16 23:42:52,574 - INFO - Epoch 4, Batch 20, Loss: 6.7176\n",
-      "2025-02-16 23:43:02,572 - INFO - Epoch 4, Batch 30, Loss: 6.7131\n",
-      "2025-02-16 23:43:02,813 - INFO - Epoch 4 complete, Average Loss: 6.7230\n",
-      "2025-02-16 23:43:03,759 - INFO - Epoch 5, Batch 0, Loss: 6.7077\n",
-      "2025-02-16 23:43:13,795 - INFO - Epoch 5, Batch 10, Loss: 6.6590\n",
-      "2025-02-16 23:43:23,168 - INFO - Epoch 5, Batch 20, Loss: 6.5553\n",
-      "2025-02-16 23:43:32,316 - INFO - Epoch 5, Batch 30, Loss: 6.5218\n",
-      "2025-02-16 23:43:32,538 - INFO - Epoch 5 complete, Average Loss: 6.5273\n",
-      "2025-02-16 23:43:33,444 - INFO - Epoch 6, Batch 0, Loss: 6.6148\n",
-      "2025-02-16 23:43:43,108 - INFO - Epoch 6, Batch 10, Loss: 6.5214\n",
-      "2025-02-16 23:43:52,439 - INFO - Epoch 6, Batch 20, Loss: 6.4419\n",
-      "2025-02-16 23:44:02,170 - INFO - Epoch 6, Batch 30, Loss: 6.4460\n",
-      "2025-02-16 23:44:02,379 - INFO - Epoch 6 complete, Average Loss: 6.4257\n",
-      "2025-02-16 23:44:03,362 - INFO - Epoch 7, Batch 0, Loss: 6.2710\n",
-      "2025-02-16 23:44:13,176 - INFO - Epoch 7, Batch 10, Loss: 6.3453\n",
-      "2025-02-16 23:44:22,963 - INFO - Epoch 7, Batch 20, Loss: 6.4277\n",
-      "2025-02-16 23:44:32,866 - INFO - Epoch 7, Batch 30, Loss: 6.3911\n",
-      "2025-02-16 23:44:33,108 - INFO - Epoch 7 complete, Average Loss: 6.3583\n",
-      "2025-02-16 23:44:34,255 - INFO - Epoch 8, Batch 0, Loss: 6.2954\n",
-      "2025-02-16 23:44:43,753 - INFO - Epoch 8, Batch 10, Loss: 6.3665\n",
-      "2025-02-16 23:44:53,374 - INFO - Epoch 8, Batch 20, Loss: 6.4539\n",
-      "2025-02-16 23:45:02,604 - INFO - Epoch 8, Batch 30, Loss: 6.3276\n",
-      "2025-02-16 23:45:02,838 - INFO - Epoch 8 complete, Average Loss: 6.2975\n",
-      "2025-02-16 23:45:03,675 - INFO - Epoch 9, Batch 0, Loss: 6.2826\n",
-      "2025-02-16 23:45:13,756 - INFO - Epoch 9, Batch 10, Loss: 6.2906\n",
-      "2025-02-16 23:45:23,583 - INFO - Epoch 9, Batch 20, Loss: 6.2003\n",
-      "2025-02-16 23:45:33,604 - INFO - Epoch 9, Batch 30, Loss: 6.3228\n",
-      "2025-02-16 23:45:33,806 - INFO - Epoch 9 complete, Average Loss: 6.2589\n",
-      "2025-02-16 23:45:34,812 - INFO - Epoch 10, Batch 0, Loss: 6.2087\n",
-      "2025-02-16 23:45:44,891 - INFO - Epoch 10, Batch 10, Loss: 6.1784\n",
-      "2025-02-16 23:45:54,773 - INFO - Epoch 10, Batch 20, Loss: 6.1870\n",
-      "2025-02-16 23:46:04,479 - INFO - Epoch 10, Batch 30, Loss: 6.0867\n",
-      "2025-02-16 23:46:04,694 - INFO - Epoch 10 complete, Average Loss: 6.2040\n",
-      "2025-02-16 23:46:06,818 - INFO - Model saved to multilingual_nmt_model.pt\n",
-      "2025-02-16 23:46:07,112 - INFO - Training loss plot saved to training_loss.png\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample translations saved to sample_translations.txt\n"
+      "2025-02-17 13:03:40,232 - INFO - Model initialized and moved to device: cpu\n",
+      "2025-02-17 13:04:05,320 - INFO - Aligned embeddings integrated into the model.\n",
+      "2025-02-17 13:04:05,401 - INFO - Training data loaded. Total batches: 32\n",
+      "2025-02-17 13:04:06,903 - INFO - Epoch 1, Batch 0, Loss: 10.4472\n",
+      "2025-02-17 13:04:21,634 - INFO - Epoch 1, Batch 10, Loss: 9.0223\n",
+      "2025-02-17 13:04:34,967 - INFO - Epoch 1, Batch 20, Loss: 8.7045\n"
      ]
     }
    ],
@@ -1241,12 +1183,16 @@
     "# eval_nmt_2.py\n",
     "\n",
     "Evaluation attempt 2, & this time:\n",
-    "- Updated version of your inference code that uses beam search instead of greedy decoding."
+    "- Updated version of your inference code that uses beam search instead of greedy decoding.\n",
+    "\n",
+    "This code loads the trained multilingual NMT model and SentencePiece model, then uses beam search decoding to generate translations for a test set of English sentences. \n",
+    "\n",
+    "It saves these translations for inspection and computes an overall BLEU score to quantitatively evaluate translation quality."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1200,16 @@
      "output_type": "stream",
      "text": [
       "2025-02-17 11:33:02,161 - INFO - Trained model loaded from multilingual_nmt_model.pt\n",
-      "2025-02-17 11:33:02,165 - INFO - Loaded 997 test sentences.\n"
+      "2025-02-17 11:33:02,165 - INFO - Loaded 997 test sentences.\n",
+      "2025-02-17 11:58:20,381 - INFO - Generated translations saved to generated_translations_beam.txt\n",
+      "2025-02-17 11:58:20,493 - INFO - BLEU score: 0.00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU score: 0.0\n"
      ]
     }
    ],
@@ -1368,11 +1323,203 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# eval_nmt_3.py\n",
+    "\n",
+    "Beam Search Decoding:\n",
+    "- The beam_search_decode function uses beam search to decode a source sentence, exploring multiple candidate sequences and returning the best one based on cumulative log-probabilities.\n",
+    "\n",
+    "Translation Generation:\n",
+    "- The generate_translations_beam function applies beam search decoding to each source sentence in your test set and produces the final translations.\n",
+    "\n",
+    "Test Data Loading:\n",
+    "- load_test_data reads your eng_test.txt and ben_test.txt files, assuming each line contains one sentence.\n",
+    "\n",
+    "Model Evaluation:\n",
+    "- In evaluate_model, the script:\n",
+    "    - Loads your SentencePiece model and your trained NMT model.\n",
+    "    - Loads the test sentences.\n",
+    "    - Generates translations for these sentences.\n",
+    "    - Saves the generated translations for qualitative analysis.\n",
+    "    - Computes the corpus BLEU score using sacreBLEU, and prints/logs it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\TAMANG\\Documents\\GitHub\\research-cross-lingual-translation-english-bengali\\venv\\Lib\\site-packages\\torch\\nn\\modules\\transformer.py:385: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(\n",
+      "2025-02-17 12:45:45,077 - INFO - Trained model loaded from multilingual_nmt_model.pt\n",
+      "2025-02-17 12:45:45,079 - INFO - Loaded 50 test sentences.\n",
+      "2025-02-17 12:46:59,080 - INFO - Generated translations saved to generated_translations_beam.txt\n",
+      "2025-02-17 12:46:59,093 - INFO - BLEU score: 0.05\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU score: 0.047171031867075615\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/env python3\n",
+    "import torch\n",
+    "import sentencepiece as spm\n",
+    "import sacrebleu\n",
+    "import logging\n",
+    "from fasttext import load_model\n",
+    "# from nmt_model import MultilingualTransformer  # Ensure this file is in your working directory\n",
+    "import os\n",
+    "\n",
+    "# Set up logging\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "\n",
+    "def beam_search_decode(model, src, sp, beam_width=3, max_len=50, start_token_id=1, end_token_id=0):\n",
+    "    \"\"\"\n",
+    "    Beam search decoding for a single source sentence.\n",
+    "    Assumes src is a tensor of shape (seq_len, 1).\n",
+    "    Returns the best candidate sequence as a list of token ids.\n",
+    "    \"\"\"\n",
+    "    device = next(model.parameters()).device\n",
+    "    src = src.to(device)\n",
+    "    memory = model.transformer.encoder(model.pos_encoder(model.embedding(src)))\n",
+    "    beam = [(torch.tensor([start_token_id], dtype=torch.long, device=device), 0.0)]\n",
+    "    for _ in range(max_len - 1):\n",
+    "        new_beam = []\n",
+    "        for seq, score in beam:\n",
+    "            seq = seq.view(-1)\n",
+    "            if seq[-1].item() == end_token_id:\n",
+    "                new_beam.append((seq, score))\n",
+    "                continue\n",
+    "            seq_input = seq.unsqueeze(1)  # (current_seq_len, 1)\n",
+    "            tgt_mask = model.transformer.generate_square_subsequent_mask(seq_input.size(0)).to(device)\n",
+    "            out = model.transformer.decoder(model.pos_encoder(model.embedding(seq_input)), memory, tgt_mask=tgt_mask)\n",
+    "            logits = model.fc_out(out[-1, :])  # shape: (1, vocab_size)\n",
+    "            log_probs = torch.log_softmax(logits, dim=-1)\n",
+    "            topk_log_probs, topk_indices = torch.topk(log_probs, beam_width, dim=-1)\n",
+    "            for j in range(beam_width):\n",
+    "                candidate = topk_indices[0, j].unsqueeze(0)  # shape: (1,)\n",
+    "                candidate_log_prob = topk_log_probs[0, j].item()\n",
+    "                new_seq = torch.cat([seq, candidate], dim=0)\n",
+    "                new_score = score + candidate_log_prob\n",
+    "                new_beam.append((new_seq, new_score))\n",
+    "        beam = sorted(new_beam, key=lambda x: x[1], reverse=True)[:beam_width]\n",
+    "        if all(seq[-1].item() == end_token_id for seq, _ in beam):\n",
+    "            break\n",
+    "    best_seq, best_score = beam[0]\n",
+    "    return best_seq.squeeze().tolist()\n",
+    "\n",
+    "def generate_translations_beam(model, sp, src_sentences, beam_width=3):\n",
+    "    \"\"\"\n",
+    "    Generate translations for a list of source sentences using beam search decoding.\n",
+    "    Returns a list of translated sentences (strings).\n",
+    "    \"\"\"\n",
+    "    model.eval()\n",
+    "    translations = []\n",
+    "    for sentence in src_sentences:\n",
+    "        src_ids = sp.encode_as_ids(sentence.strip())\n",
+    "        src_tensor = torch.tensor(src_ids, dtype=torch.long).unsqueeze(1)\n",
+    "        translation_ids = beam_search_decode(model, src_tensor, sp, beam_width=beam_width)\n",
+    "        translation = sp.decode_ids(translation_ids if isinstance(translation_ids, list) else [translation_ids])\n",
+    "        translations.append(translation)\n",
+    "    return translations\n",
+    "\n",
+    "def load_test_data(src_path, ref_path):\n",
+    "    \"\"\"\n",
+    "    Load test data from text files.\n",
+    "    Each file should have one sentence per line.\n",
+    "    Returns two lists: source sentences and reference sentences.\n",
+    "    \"\"\"\n",
+    "    with open(src_path, 'r', encoding='utf-8') as f:\n",
+    "        src_sentences = [line.strip() for line in f if line.strip()]\n",
+    "    with open(ref_path, 'r', encoding='utf-8') as f:\n",
+    "        ref_sentences = [line.strip() for line in f if line.strip()]\n",
+    "    return src_sentences, ref_sentences\n",
+    "\n",
+    "def evaluate_model():\n",
+    "    # Define file paths\n",
+    "    test_src_path = \"eng_test_mini.txt\"    # File with English test sentences\n",
+    "    test_ref_path = \"ben_test_mini.txt\"     # File with corresponding reference Bengali translations\n",
+    "    sp_model_path = \"spm_model.model\"\n",
+    "    model_path = \"multilingual_nmt_model.pt\"\n",
+    "    \n",
+    "    # Hyperparameters (must match training settings)\n",
+    "    vocab_size = 32000\n",
+    "    d_model = 300\n",
+    "    nhead = 6\n",
+    "    num_encoder_layers = 3\n",
+    "    num_decoder_layers = 3\n",
+    "    \n",
+    "    # Load SentencePiece model\n",
+    "    sp = spm.SentencePieceProcessor(model_file=sp_model_path)\n",
+    "    \n",
+    "    # Initialize and load the trained NMT model\n",
+    "    model = MultilingualTransformer(vocab_size, d_model, nhead, num_encoder_layers, num_decoder_layers)\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    model.to(device)\n",
+    "    model.load_state_dict(torch.load(model_path, map_location=device))\n",
+    "    logging.info(\"Trained model loaded from %s\", model_path)\n",
+    "    \n",
+    "    # Load test data\n",
+    "    src_sentences, ref_sentences = load_test_data(test_src_path, test_ref_path)\n",
+    "    logging.info(\"Loaded %d test sentences.\", len(src_sentences))\n",
+    "    \n",
+    "    # Generate translations using beam search\n",
+    "    generated_translations = generate_translations_beam(model, sp, src_sentences, beam_width=3)\n",
+    "    \n",
+    "    # Save generated translations for qualitative analysis\n",
+    "    with open(\"generated_translations_beam.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "        for src, trans in zip(src_sentences, generated_translations):\n",
+    "            f.write(\"Source: \" + src + \"\\n\")\n",
+    "            f.write(\"Translation: \" + trans + \"\\n\\n\")\n",
+    "    logging.info(\"Generated translations saved to generated_translations_beam.txt\")\n",
+    "    \n",
+    "    # Compute BLEU score using sacreBLEU (sacreBLEU expects a list of reference lists)\n",
+    "    bleu = sacrebleu.corpus_bleu(generated_translations, [ref_sentences])\n",
+    "    logging.info(\"BLEU score: %.2f\", bleu.score)\n",
+    "    print(\"BLEU score:\", bleu.score)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    evaluate_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-17 12:49:10,821 - INFO - Trained model loaded from multilingual_nmt_model.pt\n",
+      "2025-02-17 12:49:10,842 - INFO - Loaded 100 test sentences.\n",
+      "2025-02-17 12:51:35,587 - INFO - Generated translations saved to generated_translations_beam.txt\n",
+      "2025-02-17 12:51:35,605 - INFO - BLEU score: 0.03\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU score: 0.030011221657702203\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    evaluate_model()"
+   ]
   }
  ],
  "metadata": {
