--- a/main.ipynb
+++ b/main.ipynb
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,113 @@
       "2025-02-17 13:04:05,401 - INFO - Training data loaded. Total batches: 32\n",
       "2025-02-17 13:04:06,903 - INFO - Epoch 1, Batch 0, Loss: 10.4472\n",
       "2025-02-17 13:04:21,634 - INFO - Epoch 1, Batch 10, Loss: 9.0223\n",
-      "2025-02-17 13:04:34,967 - INFO - Epoch 1, Batch 20, Loss: 8.7045\n"
+      "2025-02-17 13:04:34,967 - INFO - Epoch 1, Batch 20, Loss: 8.7045\n",
+      "2025-02-17 13:04:46,988 - INFO - Epoch 1, Batch 30, Loss: 8.3524\n",
+      "2025-02-17 13:04:47,583 - INFO - Epoch 1 complete, Average Loss: 8.9437\n",
+      "2025-02-17 13:04:48,881 - INFO - Epoch 2, Batch 0, Loss: 8.1842\n",
+      "2025-02-17 13:05:01,418 - INFO - Epoch 2, Batch 10, Loss: 7.6786\n",
+      "2025-02-17 13:05:13,421 - INFO - Epoch 2, Batch 20, Loss: 7.7017\n",
+      "2025-02-17 13:05:24,394 - INFO - Epoch 2, Batch 30, Loss: 7.3742\n",
+      "2025-02-17 13:05:24,682 - INFO - Epoch 2 complete, Average Loss: 7.7004\n",
+      "2025-02-17 13:05:25,820 - INFO - Epoch 3, Batch 0, Loss: 7.3428\n",
+      "2025-02-17 13:05:37,594 - INFO - Epoch 3, Batch 10, Loss: 7.1224\n",
+      "2025-02-17 13:05:49,663 - INFO - Epoch 3, Batch 20, Loss: 7.1046\n",
+      "2025-02-17 13:06:00,894 - INFO - Epoch 3, Batch 30, Loss: 6.9277\n",
+      "2025-02-17 13:06:01,157 - INFO - Epoch 3 complete, Average Loss: 7.0702\n",
+      "2025-02-17 13:06:02,195 - INFO - Epoch 4, Batch 0, Loss: 6.8434\n",
+      "2025-02-17 13:06:13,959 - INFO - Epoch 4, Batch 10, Loss: 6.7507\n",
+      "2025-02-17 13:06:24,494 - INFO - Epoch 4, Batch 20, Loss: 6.7016\n",
+      "2025-02-17 13:06:35,601 - INFO - Epoch 4, Batch 30, Loss: 6.4409\n",
+      "2025-02-17 13:06:35,855 - INFO - Epoch 4 complete, Average Loss: 6.7113\n",
+      "2025-02-17 13:06:36,847 - INFO - Epoch 5, Batch 0, Loss: 6.4509\n",
+      "2025-02-17 13:06:46,885 - INFO - Epoch 5, Batch 10, Loss: 6.4990\n",
+      "2025-02-17 13:06:57,221 - INFO - Epoch 5, Batch 20, Loss: 6.4713\n",
+      "2025-02-17 13:07:08,763 - INFO - Epoch 5, Batch 30, Loss: 6.4067\n",
+      "2025-02-17 13:07:09,005 - INFO - Epoch 5 complete, Average Loss: 6.5012\n",
+      "2025-02-17 13:07:10,252 - INFO - Epoch 6, Batch 0, Loss: 6.5875\n",
+      "2025-02-17 13:07:22,189 - INFO - Epoch 6, Batch 10, Loss: 6.4033\n",
+      "2025-02-17 13:07:33,526 - INFO - Epoch 6, Batch 20, Loss: 6.3709\n",
+      "2025-02-17 13:07:44,045 - INFO - Epoch 6, Batch 30, Loss: 6.3889\n",
+      "2025-02-17 13:07:44,280 - INFO - Epoch 6 complete, Average Loss: 6.4138\n",
+      "2025-02-17 13:07:45,210 - INFO - Epoch 7, Batch 0, Loss: 6.3089\n",
+      "2025-02-17 13:07:56,260 - INFO - Epoch 7, Batch 10, Loss: 6.3732\n",
+      "2025-02-17 13:08:07,454 - INFO - Epoch 7, Batch 20, Loss: 6.1893\n",
+      "2025-02-17 13:08:18,364 - INFO - Epoch 7, Batch 30, Loss: 6.3305\n",
+      "2025-02-17 13:08:18,595 - INFO - Epoch 7 complete, Average Loss: 6.3377\n",
+      "2025-02-17 13:08:19,591 - INFO - Epoch 8, Batch 0, Loss: 6.4547\n",
+      "2025-02-17 13:08:30,255 - INFO - Epoch 8, Batch 10, Loss: 6.2153\n",
+      "2025-02-17 13:08:42,165 - INFO - Epoch 8, Batch 20, Loss: 6.2692\n",
+      "2025-02-17 13:08:53,747 - INFO - Epoch 8, Batch 30, Loss: 6.3260\n",
+      "2025-02-17 13:08:53,980 - INFO - Epoch 8 complete, Average Loss: 6.2921\n",
+      "2025-02-17 13:08:55,119 - INFO - Epoch 9, Batch 0, Loss: 6.3806\n",
+      "2025-02-17 13:09:06,517 - INFO - Epoch 9, Batch 10, Loss: 6.3070\n",
+      "2025-02-17 13:09:17,064 - INFO - Epoch 9, Batch 20, Loss: 6.2151\n",
+      "2025-02-17 13:09:28,189 - INFO - Epoch 9, Batch 30, Loss: 6.2468\n",
+      "2025-02-17 13:09:28,422 - INFO - Epoch 9 complete, Average Loss: 6.2387\n",
+      "2025-02-17 13:09:29,281 - INFO - Epoch 10, Batch 0, Loss: 5.8954\n",
+      "2025-02-17 13:09:41,077 - INFO - Epoch 10, Batch 10, Loss: 6.2331\n",
+      "2025-02-17 13:09:51,834 - INFO - Epoch 10, Batch 20, Loss: 6.3501\n",
+      "2025-02-17 13:10:03,587 - INFO - Epoch 10, Batch 30, Loss: 6.1112\n",
+      "2025-02-17 13:10:03,844 - INFO - Epoch 10 complete, Average Loss: 6.1881\n",
+      "2025-02-17 13:10:04,789 - INFO - Epoch 11, Batch 0, Loss: 5.8854\n",
+      "2025-02-17 13:10:16,194 - INFO - Epoch 11, Batch 10, Loss: 6.2760\n",
+      "2025-02-17 13:10:26,294 - INFO - Epoch 11, Batch 20, Loss: 6.1140\n",
+      "2025-02-17 13:10:36,628 - INFO - Epoch 11, Batch 30, Loss: 6.0749\n",
+      "2025-02-17 13:10:36,846 - INFO - Epoch 11 complete, Average Loss: 6.1276\n",
+      "2025-02-17 13:10:37,785 - INFO - Epoch 12, Batch 0, Loss: 6.1487\n",
+      "2025-02-17 13:10:47,931 - INFO - Epoch 12, Batch 10, Loss: 6.0552\n",
+      "2025-02-17 13:10:58,339 - INFO - Epoch 12, Batch 20, Loss: 6.1337\n",
+      "2025-02-17 13:11:09,665 - INFO - Epoch 12, Batch 30, Loss: 6.0503\n",
+      "2025-02-17 13:11:09,904 - INFO - Epoch 12 complete, Average Loss: 6.0750\n",
+      "2025-02-17 13:11:10,832 - INFO - Epoch 13, Batch 0, Loss: 5.9090\n",
+      "2025-02-17 13:11:20,701 - INFO - Epoch 13, Batch 10, Loss: 6.1359\n",
+      "2025-02-17 13:11:32,354 - INFO - Epoch 13, Batch 20, Loss: 6.1719\n",
+      "2025-02-17 13:11:44,170 - INFO - Epoch 13, Batch 30, Loss: 5.9154\n",
+      "2025-02-17 13:11:44,432 - INFO - Epoch 13 complete, Average Loss: 6.0265\n",
+      "2025-02-17 13:11:45,733 - INFO - Epoch 14, Batch 0, Loss: 6.1704\n",
+      "2025-02-17 13:11:56,242 - INFO - Epoch 14, Batch 10, Loss: 5.8219\n",
+      "2025-02-17 13:12:09,042 - INFO - Epoch 14, Batch 20, Loss: 5.8557\n",
+      "2025-02-17 13:12:19,911 - INFO - Epoch 14, Batch 30, Loss: 5.8682\n",
+      "2025-02-17 13:12:20,145 - INFO - Epoch 14 complete, Average Loss: 5.9467\n",
+      "2025-02-17 13:12:21,139 - INFO - Epoch 15, Batch 0, Loss: 5.8744\n",
+      "2025-02-17 13:12:33,069 - INFO - Epoch 15, Batch 10, Loss: 5.8941\n",
+      "2025-02-17 13:12:44,439 - INFO - Epoch 15, Batch 20, Loss: 5.7752\n",
+      "2025-02-17 13:12:55,193 - INFO - Epoch 15, Batch 30, Loss: 5.8832\n",
+      "2025-02-17 13:12:55,414 - INFO - Epoch 15 complete, Average Loss: 5.8826\n",
+      "2025-02-17 13:12:56,618 - INFO - Epoch 16, Batch 0, Loss: 5.7784\n",
+      "2025-02-17 13:13:07,787 - INFO - Epoch 16, Batch 10, Loss: 5.8089\n",
+      "2025-02-17 13:13:18,223 - INFO - Epoch 16, Batch 20, Loss: 5.7266\n",
+      "2025-02-17 13:13:28,724 - INFO - Epoch 16, Batch 30, Loss: 5.7683\n",
+      "2025-02-17 13:13:28,993 - INFO - Epoch 16 complete, Average Loss: 5.7976\n",
+      "2025-02-17 13:13:30,471 - INFO - Epoch 17, Batch 0, Loss: 5.7133\n",
+      "2025-02-17 13:13:41,602 - INFO - Epoch 17, Batch 10, Loss: 5.7945\n",
+      "2025-02-17 13:13:52,403 - INFO - Epoch 17, Batch 20, Loss: 5.6450\n",
+      "2025-02-17 13:14:04,896 - INFO - Epoch 17, Batch 30, Loss: 5.8171\n",
+      "2025-02-17 13:14:05,242 - INFO - Epoch 17 complete, Average Loss: 5.7281\n",
+      "2025-02-17 13:14:06,505 - INFO - Epoch 18, Batch 0, Loss: 5.6740\n",
+      "2025-02-17 13:14:18,810 - INFO - Epoch 18, Batch 10, Loss: 5.5865\n",
+      "2025-02-17 13:14:30,105 - INFO - Epoch 18, Batch 20, Loss: 5.6142\n",
+      "2025-02-17 13:14:41,778 - INFO - Epoch 18, Batch 30, Loss: 5.5782\n",
+      "2025-02-17 13:14:42,052 - INFO - Epoch 18 complete, Average Loss: 5.6435\n",
+      "2025-02-17 13:14:43,389 - INFO - Epoch 19, Batch 0, Loss: 5.5759\n",
+      "2025-02-17 13:14:54,202 - INFO - Epoch 19, Batch 10, Loss: 5.6132\n",
+      "2025-02-17 13:15:05,273 - INFO - Epoch 19, Batch 20, Loss: 5.4893\n",
+      "2025-02-17 13:15:17,258 - INFO - Epoch 19, Batch 30, Loss: 5.6125\n",
+      "2025-02-17 13:15:17,529 - INFO - Epoch 19 complete, Average Loss: 5.5559\n",
+      "2025-02-17 13:15:18,795 - INFO - Epoch 20, Batch 0, Loss: 5.4587\n",
+      "2025-02-17 13:15:31,421 - INFO - Epoch 20, Batch 10, Loss: 5.4235\n",
+      "2025-02-17 13:15:43,702 - INFO - Epoch 20, Batch 20, Loss: 5.4621\n",
+      "2025-02-17 13:15:56,561 - INFO - Epoch 20, Batch 30, Loss: 5.5767\n",
+      "2025-02-17 13:15:56,851 - INFO - Epoch 20 complete, Average Loss: 5.4698\n",
+      "2025-02-17 13:15:57,166 - INFO - Model saved to multilingual_nmt_model.pt\n",
+      "2025-02-17 13:15:57,445 - INFO - Training loss plot saved to training_loss.png\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample translations saved to sample_translations.txt\n"
      ]
     }
    ],
@@ -1495,24 +1601,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-17 12:49:10,821 - INFO - Trained model loaded from multilingual_nmt_model.pt\n",
-      "2025-02-17 12:49:10,842 - INFO - Loaded 100 test sentences.\n",
-      "2025-02-17 12:51:35,587 - INFO - Generated translations saved to generated_translations_beam.txt\n",
-      "2025-02-17 12:51:35,605 - INFO - BLEU score: 0.03\n"
+      "2025-02-17 13:16:59,957 - INFO - Trained model loaded from multilingual_nmt_model.pt\n",
+      "2025-02-17 13:16:59,959 - INFO - Loaded 100 test sentences.\n",
+      "2025-02-17 13:19:24,619 - INFO - Generated translations saved to generated_translations_beam.txt\n",
+      "2025-02-17 13:19:24,635 - INFO - BLEU score: 0.14\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BLEU score: 0.030011221657702203\n"
+      "BLEU score: 0.1358010393974897\n"
      ]
     }
    ],
